fixes collapses dropdown in MA stats chart

--- a/client/components/StatsModal/index.sass
+++ b/client/components/StatsModal/index.sass
@@ -8,8 +8,7 @@
     left: 7px
     color: $grey-text
   &-prices
-    display: flex
-    justify-content: center
+    text-align: center
     font-size: 14px
     color: $grey-text
     > span:not(:last-child)
@@ -37,6 +36,7 @@
       margin-left: 10px
   .Dropdown
     margin: 10px 0
+    min-height: 29px
 
 .Slider
   display: flex
